discussion/kv_engine/184678/184678_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Enable and test magma API capabilities

Replace the todo markers with code that now utilises the magma history
API.

Add new tests that validate multiple versions can be stored and
returned.

Change-Id: Ica9ea1b52c51f125c9e8839a0fca412834fc25f7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-16 15:59:43.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-16 16:00:18.000000000
Message: 
Patch Set 4: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332666/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-16 16:19:24.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/821/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1819:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::Snapshot);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1823:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::History);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1827:60: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                                magma::Magma::SeqIterator::Mode mode) const {
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2886:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:37:9: error: unknown type name "Mode" [clang-diagnostic-error]
        Mode mode) {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:39:17: error: no member named "Initialize" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return itr->Initialize(startSeqno, endSeqno, mode);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:460:12: error: no member named "SetHistoryRetentionSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetHistoryRetentionSize(historyBytes);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:466:12: error: no member named "SetHistoryRetentionTime" in "magma::Magma" [clang-diagnostic-error]
    magma->SetHistoryRetentionTime(historySeconds);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:514:43: error: no member named "HistoryMode" in "magma::Magma" [clang-diagnostic-error]
                            magma::Magma::HistoryMode::Enabled);
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:538:19: error: no member named "GetOldestHistorySeqno" in "magma::Magma" [clang-diagnostic-error]
    return magma->GetOldestHistorySeqno(kvid);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:544:19: error: no member named "GetOldestHistorySeqno" in "magma::Magma" [clang-diagnostic-error]
    return magma->GetOldestHistorySeqno(snapshot);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/821/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1819:49:
error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/821/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/999/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(774): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/999/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/792/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/792/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/792/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1109/ : FAILURE

Compile error at [2023-01-16T16:05:45.472Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1109/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/841/ : FAILURE

Compile error at [2023-01-16T16:16:55.099Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/841/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/827/ : FAILURE

Compile error at [2023-01-16T16:04:14.695Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/827/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/832/ : FAILURE

Compile error at [2023-01-16T16:14:59.495Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/832/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/842/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Missing stat:  ep_magma_value_separation_size from stat group 
[2023-01-16T16:18:05.788Z] Missing stat:  ep_magma_value_separation_size from stat group config
[2023-01-16T16:18:05.788Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7880 Test failed: `stats error" (missing stats)
[2023-01-16T16:18:05.788Z] (31 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/842/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/833/ : FAILURE

Compile error at [2023-01-16T16:18:07.404Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/833/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/813/ : FAILURE

Compile error at [2023-01-16T16:18:08.151Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/813/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22201/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
